<resources>
    <string name="app_name">Shining India</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="about_us">ABOUT US</string>
    <string name="booking">Booking</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="phone_number">Phone number</string>
    <string name="register">REGISTER</string>
    <string name="welcome">Welcome</string>
    <string name="increase">+</string>
    <string name="placeHolder">-----</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="decrease">-</string>
    <string name="todo">TODO</string>
    <string name="food_image">Food Image</string>
    <string name="show_hide_box">showHideBox</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="address">Address</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="payment_options">Payment Options</string>
    <string name="order">Order!</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="show_passwords">Show Passwords</string>
    <string name="name">Name</string>
    <string name="quantity_text">Quantity</string>
    <string name="content">Content</string>
    <string name="price">Price</string>
    <string name="delete_image">DeleteImage</string>
    <string name="pick_date" />
    <string name="book_a_table_now">Book a Table Now!</string>
    <string name="book_a_table">Book a Table!</string>
    <string name="online_payment">Online Payment</string>
    <string name="last_date_of_use">Last Date of Use</string>
    <string name="pay_amp_order"><![CDATA[Pay & Order]]></string>
    <string name="owner_s_name">Owners Name</string>
    <string name="card_number">Card Number</string>
    <string name="security_number">Security Number</string>
    <string name="date_of_reservation">Date of Reservation</string>
    <string name="number_of_guests">Number of Guests</string>
    <string name="time_of_reservation">Time of Reservation</string>
    <string name="email_address">Email Address</string>
    <string name="order_your_meal_now">Order Your Meal Now!</string>
    <string name="welcome_to_shining_india">Welcome to Shining India!</string>
</resources>