<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bookButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:onClick="bookTable"
    tools:context=".Booking.BookingActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="1dp"
        app:menu="@menu/bottom_menu" />


    <TextView
        android:id="@+id/bookTextView"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:fontFamily="@font/dancing_script"
        android:gravity="center"
        android:text="@string/book_a_table_now"
        android:textColor="#E9877E26"
        android:textSize="24sp"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/bookingDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailAddressText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:autofillHints=""
        android:ems="10"

        android:focusable="false"
        android:hint="@string/date_of_reservation"
        android:inputType="date" />

    <EditText
        android:id="@+id/guestNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/number_of_guests"
        android:inputType="number" />

    <EditText
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookingDate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="false"
        android:hint="@string/time_of_reservation"
        android:inputType="time" />

    <EditText
        android:id="@+id/emailAddressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/guestNumberText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/button"
        android:layout_width="179dp"
        android:layout_height="66dp"
        android:layout_below="@+id/timeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:onClick="bookTable"
        android:text="Book A Table" />


</RelativeLayout>