<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="411dp"
        android:layout_height="155dp"
        android:layout_margin="4dp"
        android:background="@color/gray_yellow">


        <ImageView
            android:id="@+id/itemImageView"
            android:layout_width="91dp"
            android:layout_height="89dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/food_image"
            android:padding="2dp" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@id/itemImageView"
            android:layout_toRightOf="@id/itemImageView"
            android:text="@string/name"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="199dp"
            android:layout_height="92dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="52dp"
            android:layout_toEndOf="@id/itemImageView"
            android:layout_toRightOf="@id/itemImageView"
            android:fontFamily="@font/dancing_script"
            android:text="@string/content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="83dp"
            android:layout_height="76dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="-2dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/nameTextView"
            android:layout_toRightOf="@+id/nameTextView"
            android:text="@string/price"
            android:textSize="17sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>